[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "self_encryption"
version = "0.32.4"
description = "Self encrypting files (convergent encryption plus obfuscation)"
authors = [
    {name = "MaidSafe Developers", email = "dev@maidsafe.net"}
]
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python"]
module-name = "self_encryption"
