[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "autonomi"
requires-python = ">=3.8"
authors = [
    {name = "MaidSafe Developers", email = "dev@maidsafe.net"}
]
description = "Autonomi client API"
readme = "README.md"
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "autonomi._autonomi"
